bundles/mesh/inc/gap.h

typedef struct le_connection_parameter_range{
    uint16_t le_conn_interval_min;
    uint16_t le_conn_interval_max;
    uint16_t le_conn_latency_min;
    uint16_t le_conn_latency_max;
    uint16_t le_supervision_timeout_min;
    uint16_t le_supervision_timeout_max;
} le_connection_parameter_range_t;
//LE Scan type
typedef enum scan_type
{
    //Passive scan
    SCAN_PASSIVE = 0x00,
    //Active scan
    SCAN_ACTIVE = 0x01,
} scan_type_t;
void gap_set_random_device_address(const uint8_t *address);
/**
 * Disconnect connection with handle
 *
 * @param handle
 */
uint8_t gap_disconnect(hci_con_handle_t handle);
uint8_t gap_add_whitelist(const uint8_t *address,bd_addr_type_t  addtype);
uint8_t gap_remove_whitelist(const uint8_t *address,bd_addr_type_t addtype);
typedef enum phy_type
{
     PHY_1M = 0x01,
     PHY_2M = 0x02,
     PHY_CODED = 0x03,
} phy_type_t;
/*bit configure for */
typedef enum phy_bittype
{
    PHY_1M_BIT    = BIT(0),
    PHY_2M_BIT    = BIT(1),
    PHY_CODED_BIT = BIT(2),
} phy_bittype_t;
typedef uint8_t phy_bittypes_t;
typedef enum
{
    ADV_CONNECTABLE,
    ADV_SCANNABLE,
    ADV_DIRECT,
    ADV_HIGH_DUTY_DIR_ADV,
    ADV_LEGACY,
    ADV_ANONYMOUS,
    ADV_INC_TX_POWER
} adv_event_property_t;
typedef uint8_t adv_event_properties_t;
#define PERIODIC_ADV_BIT_INC_TX      BIT(6)
typedef uint8_t periodic_adv_properties_t;
uint8_t gap_read_phy(const uint16_t con_handle);
uint8_t gap_set_def_phy(const uint8_t all_phys, const phy_bittypes_t tx_phys, const phy_bittypes_t rx_phys);
typedef enum phy_option
{
    HOST_NO_PREFERRED_CODING,
    HOST_PREFER_S2_CODING,
    HOST_PREFER_S8_CODING
} phy_option_t;
uint8_t gap_set_phy(const uint16_t con_handle, const uint8_t all_phys, const phy_bittypes_t tx_phys,
                    const phy_bittypes_t rx_phys, const phy_option_t phy_opt);
uint8_t gap_set_adv_set_random_addr(const uint8_t adv_handle, const uint8_t *random_addr);
typedef struct scan_phy_config
{
    // Which phy to scan (valid phys: 1M & Coded)
    phy_type_t phy;
    //Scan type - 0=passive / 1=active
    scan_type_t type;
    //Scan interval, units is 625us
    uint16_t interval;
    //Scan window size, units is 625us
    uint16_t window;
} scan_phy_config_t;
//Scan filter policy
typedef enum scan_filter_policy
{
    // Accept all advertising packets except directed advertising packets not
    // addressed to this device (default).
    SCAN_ACCEPT_ALL_EXCEPT_NOT_DIRECTED,
    // Accept only advertising packets from devices where the advertiser¡¯s
    // address is in the White List. Directed advertising packets which are not
    // addressed to this device shall be ignored
    SCAN_ACCEPT_WLIST_EXCEPT_NOT_DIRECTED,
    // Accept all advertising packets except directed advertising packets
    // where the initiator's identity address does not address this device
    SCAN_ACCEPT_ALL_EXCEPT_IDENTITY_NOT_MATCH,
    // Accept all advertising packets except:
    // 1.  advertising packets where the advertiser's identity address is not in
    //     the White List; and
    // 2.  directed advertising packets where the initiator's identity address
    //     does not address this device
    SCAN_ACCEPT_WLIST_EXCEPT_IDENTITY_NOT_MATCH
} scan_filter_policy_t;
uint8_t gap_set_ext_scan_para(const bd_addr_type_t addr_type, const scan_filter_policy_t filter, const uint8_t config_num,
                              const scan_phy_config_t *configs);
uint8_t gap_set_ext_scan_response_data(const uint8_t adv_handle, const uint16_t length, const uint8_t *data);
uint8_t gap_set_ext_scan_enable(const uint8_t enable, const uint8_t filter, const uint16_t duration, const uint16_t period);
typedef struct ext_adv_set_en
{
    uint8_t handle;
    // Advertising duration, unit 10ms. 0 for continuous advertising
    uint16_t duration;
    // Maximum number of extended advertising events the Controller shall attempt to send prior to terminating the extended advertising
    // 0: no maximum number
    uint8_t max_events;
} ext_adv_set_en_t;
uint8_t gap_set_ext_adv_enable(const uint8_t enable, const uint8_t set_number, const ext_adv_set_en_t *adv_sets);
// channel map bit
#define PRIMARY_ADV_CH_37  BIT(0)
#define PRIMARY_ADV_CH_38  BIT(1)
#define PRIMARY_ADV_CH_39  BIT(2)
#define PRIMARY_ADV_ALL_CHANNELS    (PRIMARY_ADV_CH_37 | PRIMARY_ADV_CH_38 | PRIMARY_ADV_CH_39)
typedef uint8_t adv_channel_bits_t;
//Advertising filter policy
typedef enum adv_filter_policy
{
    //Allow both scan and connection requests from anyone
    ADV_FILTER_ALLOW_ALL    = 0x00,
    //Allow both scan req from White List devices only and connection req from anyone
    ADV_FILTER_ALLOW_SCAN_WLST_CON_ALL,
    //Allow both scan req from anyone and connection req from White List devices only
    ADV_FILTER_ALLOW_SCAN_ALL_CON_WLST,
    //Allow scan and connection requests from White List devices only
    ADV_FILTER_ALLOW_SCAN_WLST_CON_WLST
} adv_filter_policy_t;
uint8_t gap_set_ext_adv_para(const uint8_t adv_handle,
                             const adv_event_properties_t properties,
                             const uint32_t interval_min,
                             const uint32_t interval_max,
                             const adv_channel_bits_t primary_adv_channel_map,
	                         const bd_addr_type_t own_addr_type,
	                         const bd_addr_type_t peer_addr_type,
	                         const uint8_t *peer_addr,
	                         const adv_filter_policy_t adv_filter_policy,
	                         const int8_t tx_power,
	                         const phy_type_t primary_adv_phy,
	                         const uint8_t secondary_adv_max_skip,
	                         const phy_type_t secondary_adv_phy,
	                         const uint8_t sid,
	                         const uint8_t scan_req_notification_enable);
typedef enum adv_data_frag_pref
{
    ADV_DATA_CTRL_MAY_FRAG = 0,
    ADV_DATA_CTRL_NOT_FRAG = 1
} adv_data_frag_pref_t_t;
uint8_t gap_set_ext_adv_data(const uint8_t adv_handle, uint16_t length, const uint8_t *data);
uint8_t gap_set_periodic_adv_data(const uint8_t adv_handle, uint16_t length, const uint8_t *data);
uint8_t gap_set_periodic_adv_enable(const uint8_t enable, const uint8_t adv_handle);
uint8_t gap_set_periodic_adv_para(const uint8_t adv_handle,
                                  const uint16_t interval_min,
                                  const uint16_t interval_max,
                                  const periodic_adv_properties_t properties);
uint8_t gap_clr_adv_set(void);
uint8_t gap_rmv_adv_set(const uint8_t adv_handle);
typedef enum periodic_adv_filter_policy
{
    PERIODIC_ADVERTISER_FROM_PARAM = 0,
    PERIODIC_ADVERTISER_FROM_LIST  = 1
} periodic_adv_filter_policy_t;
uint8_t gap_periodic_adv_create_sync(const periodic_adv_filter_policy_t filter_policy,
                                     const uint8_t adv_sid,
                                     const bd_addr_type_t addr_type,
                                     const uint8_t *addr,
                                     const uint16_t skip,
                                     const uint16_t sync_timeout,
                                     const uint8_t sync_cte_type
                                    );
uint8_t gap_periodic_adv_create_sync_cancel(void);
uint8_t gap_periodic_adv_term_sync(const uint16_t sync_handle);
uint8_t gap_add_dev_to_periodic_list(const uint8_t addr_type, const uint8_t *addr, const uint8_t sid);
uint8_t gap_rmv_dev_from_periodic_list(const uint8_t addr_type, const uint8_t *addr, const uint8_t sid);
uint8_t gap_clr_periodic_adv_list(void);
uint8_t gap_read_periodic_adv_list_size(void);
typedef enum initiating_filter_policy
{
    INITIATING_ADVERTISER_FROM_PARAM = 0,
    INITIATING_ADVERTISER_FROM_LIST  = 1
} initiating_filter_policy_t;
typedef struct {
    //Scan interval, units is 625us
    uint16_t scan_int;
    //Scan window size, units is 625us
    uint16_t scan_win;
    // connection interval limiations. unit is 1.25ms
    uint16_t interval_min;
    uint16_t interval_max;
    // Slave latency for the connection in number of connection events
    uint16_t latency;
    // Supervision timeout for the LE Link, unit is 10ms
    uint16_t supervision_timeout;
    // Informative parameter recommending the min/max length of connection event needed for this LE connection
    uint16_t min_ce_len;
    uint16_t max_ce_len;
} conn_para_t;
typedef struct initiating_phy_config
{
    phy_type_t phy;
    conn_para_t conn_param;
} initiating_phy_config_t;
uint8_t gap_ext_create_connection(const initiating_filter_policy_t filter_policy,
                                  const bd_addr_type_t own_addr_type,
	                              const bd_addr_type_t peer_addr_type,
	                              const uint8_t *peer_addr,
                                  const uint8_t initiating_phy_num,
                                  const initiating_phy_config_t *phy_configs);