bundles/typical/inc/gap.nim

##  ----------------------------------------------------------------------------
##  Copyright Message
##  ----------------------------------------------------------------------------
##
##  INGCHIPS confidential and proprietary.
##  COPYRIGHT (c) 2018 by INGCHIPS
##
##  All rights are reserved. Reproduction in whole or in part is
##  prohibited without the written consent of the copyright owner.
##
##
##  ----------------------------------------------------------------------------

import
  bluetooth, bt_types

type
  le_connection_parameter_range_t* {.importc: "le_connection_parameter_range_t",
                                    header: "gap.h", bycopy.} = object
    le_conn_interval_min* {.importc: "le_conn_interval_min".}: uint16
    le_conn_interval_max* {.importc: "le_conn_interval_max".}: uint16
    le_conn_latency_min* {.importc: "le_conn_latency_min".}: uint16
    le_conn_latency_max* {.importc: "le_conn_latency_max".}: uint16
    le_supervision_timeout_min* {.importc: "le_supervision_timeout_min".}: uint16
    le_supervision_timeout_max* {.importc: "le_supervision_timeout_max".}: uint16


## LE Scan type

type                          ## Passive scan
  scan_type_t* {.size: sizeof(cint).} = enum
    SCAN_PASSIVE = 0x00000000,  ## Active scan
    SCAN_ACTIVE = 0x00000001


proc gap_set_random_device_address*(address: ptr uint8) {.
    importc: "gap_set_random_device_address", header: "gap.h".}
## *
##  Disconnect connection with handle
##
##  @param handle
##

proc gap_disconnect*(handle: hci_con_handle_t): uint8 {.importc: "gap_disconnect",
    header: "gap.h".}
proc gap_add_whitelist*(address: ptr uint8; addtype: bd_addr_type_t): uint8 {.
    importc: "gap_add_whitelist", header: "gap.h".}
proc gap_remove_whitelist*(address: ptr uint8; addtype: bd_addr_type_t): uint8 {.
    importc: "gap_remove_whitelist", header: "gap.h".}
type
  phy_type_t* {.size: sizeof(cint).} = enum
    PHY_1M = 0x00000001, PHY_2M = 0x00000002, PHY_CODED = 0x00000003


## bit configure for

type
  phy_bittype_t* {.size: sizeof(cint).} = enum
    PHY_1M_BIT = BIT(0), PHY_2M_BIT = BIT(1), PHY_CODED_BIT = BIT(2)
  phy_bittypes_t* = uint8
  adv_event_property_t* {.size: sizeof(cint).} = enum
    ADV_CONNECTABLE, ADV_SCANNABLE, ADV_DIRECT, ADV_HIGH_DUTY_DIR_ADV, ADV_LEGACY,
    ADV_ANONYMOUS, ADV_INC_TX_POWER



type
  adv_event_properties_t* = uint8

const
  PERIODIC_ADV_BIT_INC_TX* = BIT(6)

type
  periodic_adv_properties_t* = uint8

proc gap_read_phy*(con_handle: uint16): uint8 {.importc: "gap_read_phy",
    header: "gap.h".}
proc gap_set_def_phy*(all_phys: uint8; tx_phys: phy_bittypes_t;
                     rx_phys: phy_bittypes_t): uint8 {.importc: "gap_set_def_phy",
    header: "gap.h".}
type
  phy_option_t* {.size: sizeof(cint).} = enum
    HOST_NO_PREFERRED_CODING, HOST_PREFER_S2_CODING, HOST_PREFER_S8_CODING


proc gap_set_phy*(con_handle: uint16; all_phys: uint8; tx_phys: phy_bittypes_t;
                 rx_phys: phy_bittypes_t; phy_opt: phy_option_t): uint8 {.
    importc: "gap_set_phy", header: "gap.h".}
proc gap_set_adv_set_random_addr*(adv_handle: uint8; random_addr: ptr uint8): uint8 {.
    importc: "gap_set_adv_set_random_addr", header: "gap.h".}
type
  scan_phy_config_t* {.importc: "scan_phy_config_t", header: "gap.h", bycopy.} = object
    phy* {.importc: "phy".}: phy_type_t ##  Which phy to scan (valid phys: 1M & Coded)
    ## Scan type - 0=passive / 1=active
    `type`* {.importc: "type".}: scan_type_t ## Scan interval, units is 625us
    interval* {.importc: "interval".}: uint16 ## Scan window size, units is 625us
    window* {.importc: "window".}: uint16


## Scan filter policy

type ##  Accept all advertising packets except directed advertising packets not
    ##  addressed to this device (default).
  scan_filter_policy_t* {.size: sizeof(cint).} = enum
    SCAN_ACCEPT_ALL_EXCEPT_NOT_DIRECTED, ##  Accept only advertising packets from devices where the advertiser¡¯s
                                        ##  address is in the White List. Directed advertising packets which are not
                                        ##  addressed to this device shall be ignored
    SCAN_ACCEPT_WLIST_EXCEPT_NOT_DIRECTED, ##  Accept all advertising packets except directed advertising packets
                                          ##  where the initiator's identity address does not address this device
    SCAN_ACCEPT_ALL_EXCEPT_IDENTITY_NOT_MATCH, ##  Accept all advertising packets except:
                                              ##  1.  advertising packets where the advertiser's identity address is not in
                                              ##      the White List; and
                                              ##  2.  directed advertising packets where the initiator's identity address
                                              ##      does not address this device
    SCAN_ACCEPT_WLIST_EXCEPT_IDENTITY_NOT_MATCH


proc gap_set_ext_scan_para*(addr_type: bd_addr_type_t;
                           filter: scan_filter_policy_t; config_num: uint8;
                           configs: ptr scan_phy_config_t): uint8 {.
    importc: "gap_set_ext_scan_para", header: "gap.h".}
proc gap_set_ext_scan_response_data*(adv_handle: uint8; length: uint16;
                                    data: ptr uint8): uint8 {.
    importc: "gap_set_ext_scan_response_data", header: "gap.h".}
proc gap_set_ext_scan_enable*(enable: uint8; filter: uint8; duration: uint16;
                             period: uint16): uint8 {.
    importc: "gap_set_ext_scan_enable", header: "gap.h".}
type
  ext_adv_set_en_t* {.importc: "ext_adv_set_en_t", header: "gap.h", bycopy.} = object
    handle* {.importc: "handle".}: uint8 ##  Advertising duration, unit 10ms. 0 for continuous advertising
    duration* {.importc: "duration".}: uint16 ##  Maximum number of extended advertising events the Controller shall attempt to send prior to terminating the extended advertising
                                          ##  0: no maximum number
    max_events* {.importc: "max_events".}: uint8


proc gap_set_ext_adv_enable*(enable: uint8; set_number: uint8;
                            adv_sets: ptr ext_adv_set_en_t): uint8 {.
    importc: "gap_set_ext_adv_enable", header: "gap.h".}
##  channel map bit

const
  PRIMARY_ADV_CH_37* = BIT(0)
  PRIMARY_ADV_CH_38* = BIT(1)
  PRIMARY_ADV_CH_39* = BIT(2)
  PRIMARY_ADV_ALL_CHANNELS* = (
    PRIMARY_ADV_CH_37 or PRIMARY_ADV_CH_38 or PRIMARY_ADV_CH_39)

type
  adv_channel_bits_t* = uint8

## Advertising filter policy

type                          ## Allow both scan and connection requests from anyone
  adv_filter_policy_t* {.size: sizeof(cint).} = enum
    ADV_FILTER_ALLOW_ALL = 0x00000000, ## Allow both scan req from White List devices only and connection req from anyone
    ADV_FILTER_ALLOW_SCAN_WLST_CON_ALL, ## Allow both scan req from anyone and connection req from White List devices only
    ADV_FILTER_ALLOW_SCAN_ALL_CON_WLST, ## Allow scan and connection requests from White List devices only
    ADV_FILTER_ALLOW_SCAN_WLST_CON_WLST


proc gap_set_ext_adv_para*(adv_handle: uint8; properties: adv_event_properties_t;
                          interval_min: uint32; interval_max: uint32;
                          primary_adv_channel_map: adv_channel_bits_t;
                          own_addr_type: bd_addr_type_t;
                          peer_addr_type: bd_addr_type_t; peer_addr: ptr uint8;
                          adv_filter_policy: adv_filter_policy_t; tx_power: int8;
                          primary_adv_phy: phy_type_t;
                          secondary_adv_max_skip: uint8;
                          secondary_adv_phy: phy_type_t; sid: uint8;
                          scan_req_notification_enable: uint8): uint8 {.
    importc: "gap_set_ext_adv_para", header: "gap.h".}
type
  adv_data_frag_pref_t_t* {.size: sizeof(cint).} = enum
    ADV_DATA_CTRL_MAY_FRAG = 0, ADV_DATA_CTRL_NOT_FRAG = 1


proc gap_set_ext_adv_data*(adv_handle: uint8; length: uint16; data: ptr uint8): uint8 {.
    importc: "gap_set_ext_adv_data", header: "gap.h".}
proc gap_set_periodic_adv_data*(adv_handle: uint8; length: uint16; data: ptr uint8): uint8 {.
    importc: "gap_set_periodic_adv_data", header: "gap.h".}
proc gap_set_periodic_adv_enable*(enable: uint8; adv_handle: uint8): uint8 {.
    importc: "gap_set_periodic_adv_enable", header: "gap.h".}
proc gap_set_periodic_adv_para*(adv_handle: uint8; interval_min: uint16;
                               interval_max: uint16;
                               properties: periodic_adv_properties_t): uint8 {.
    importc: "gap_set_periodic_adv_para", header: "gap.h".}
proc gap_clr_adv_set*(): uint8 {.importc: "gap_clr_adv_set", header: "gap.h".}
proc gap_rmv_adv_set*(adv_handle: uint8): uint8 {.importc: "gap_rmv_adv_set",
    header: "gap.h".}
type
  periodic_adv_filter_policy_t* {.size: sizeof(cint).} = enum
    PERIODIC_ADVERTISER_FROM_PARAM = 0, PERIODIC_ADVERTISER_FROM_LIST = 1


proc gap_periodic_adv_create_sync*(filter_policy: periodic_adv_filter_policy_t;
                                  adv_sid: uint8; addr_type: bd_addr_type_t;
                                  `addr`: ptr uint8; skip: uint16;
                                  sync_timeout: uint16; sync_cte_type: uint8): uint8 {.
    importc: "gap_periodic_adv_create_sync", header: "gap.h".}
proc gap_periodic_adv_create_sync_cancel*(): uint8 {.
    importc: "gap_periodic_adv_create_sync_cancel", header: "gap.h".}
proc gap_periodic_adv_term_sync*(sync_handle: uint16): uint8 {.
    importc: "gap_periodic_adv_term_sync", header: "gap.h".}
proc gap_add_dev_to_periodic_list*(addr_type: uint8; `addr`: ptr uint8; sid: uint8): uint8 {.
    importc: "gap_add_dev_to_periodic_list", header: "gap.h".}
proc gap_rmv_dev_from_periodic_list*(addr_type: uint8; `addr`: ptr uint8; sid: uint8): uint8 {.
    importc: "gap_rmv_dev_from_periodic_list", header: "gap.h".}
proc gap_clr_periodic_adv_list*(): uint8 {.importc: "gap_clr_periodic_adv_list",
                                        header: "gap.h".}
proc gap_read_periodic_adv_list_size*(): uint8 {.
    importc: "gap_read_periodic_adv_list_size", header: "gap.h".}
type
  initiating_filter_policy_t* {.size: sizeof(cint).} = enum
    INITIATING_ADVERTISER_FROM_PARAM = 0, INITIATING_ADVERTISER_FROM_LIST = 1
  conn_para_t* {.importc: "conn_para_t", header: "gap.h", bycopy.} = object
    scan_int* {.importc: "scan_int".}: uint16 ## Scan interval, units is 625us
    ## Scan window size, units is 625us
    scan_win* {.importc: "scan_win".}: uint16 ##  connection interval limiations. unit is 1.25ms
    interval_min* {.importc: "interval_min".}: uint16
    interval_max* {.importc: "interval_max".}: uint16 ##  Slave latency for the connection in number of connection events
    latency* {.importc: "latency".}: uint16 ##  Supervision timeout for the LE Link, unit is 10ms
    supervision_timeout* {.importc: "supervision_timeout".}: uint16 ##  Informative parameter recommending the min/max length of connection event needed for this LE connection
    min_ce_len* {.importc: "min_ce_len".}: uint16
    max_ce_len* {.importc: "max_ce_len".}: uint16

  initiating_phy_config_t* {.importc: "initiating_phy_config_t", header: "gap.h",
                            bycopy.} = object
    phy* {.importc: "phy".}: phy_type_t
    conn_param* {.importc: "conn_param".}: conn_para_t



proc gap_ext_create_connection*(filter_policy: initiating_filter_policy_t;
                               own_addr_type: bd_addr_type_t;
                               peer_addr_type: bd_addr_type_t;
                               peer_addr: ptr uint8; initiating_phy_num: uint8;
                               phy_configs: ptr initiating_phy_config_t): uint8 {.
    importc: "gap_ext_create_connection", header: "gap.h".}
## *
##  @brief Cancel connection process initiated by gap_ext_create_connection
##
